[package]
name = "mineshafts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.1.1", features = ["gtk_v4_6"], package = "libadwaita" }
clap = { version = "4.0.17", features = ["unicode"] }
serde = { version = "1.0.145", features = ["derive"] }
